# elasm

./: .gitignore  CMakeLists.txt  README.md  config.json  config.sh  install.sh  requirements.txt  versions.txt
cmake/modules/: AddHecate.cmake
examples/benchmarks/: LinearRegression.py  MLP.py  SobelFilter.py
examples/data/: mlp.model
examples/tests/: LinearRegression.py  MLP.py  SobelFilter.py
include/hecate/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/hecate/Conversion/CKKSCommon/: PolyTypeConverter.h
include/hecate/Conversion/CKKSToCKKS/: UpscaleToMulcp.h
include/hecate/Conversion/EarthToCKKS/: EarthToCKKS.h
include/hecate/Dialect/: CMakeLists.txt
include/hecate/Dialect/CKKS/IR/: CKKSOps.h  CKKSOps.td  CMakeLists.txt  PolyTypeInterface.h  PolyTypeInterface.td
include/hecate/Dialect/CKKS/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/hecate/Dialect/Earth/: CMakeLists.txt
include/hecate/Dialect/Earth/Analysis/: AutoDifferentiation.h  ScaleManagementUnit.h
include/hecate/Dialect/Earth/IR/: CMakeLists.txt  EarthCanonicalizer.td  EarthOps.h  EarthOps.td  ForwardManagementInterface.h  ForwardManagementInterface.td  HEParameterInterface.h  HEParameterInterface.td
include/hecate/Dialect/Earth/Transforms/: CMakeLists.txt  Common.h  Passes.h  Passes.td
include/hecate/Support/: HEVMHeader.h  Support.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/CKKSCommon/: CMakeLists.txt  PolyTypeConverter.cpp
lib/Conversion/CKKSToCKKS/: CMakeLists.txt  UpscaleToMulcp.cpp
lib/Conversion/EarthToCKKS/: CMakeLists.txt  EarthToCKKS.cpp
lib/Dialect/CKKS/IR/: CKKSDialect.cpp  CMakeLists.txt
lib/Dialect/CKKS/Transforms/: CMakeLists.txt  EmitHEVM.cpp  RemoveLevel.cpp  ReuseBuffer.cpp
lib/Dialect/Earth/Analysis/: AutoDifferentiation.cpp  CMakeLists.txt  ScaleManagementUnit.cpp
lib/Dialect/Earth/IR/: CMakeLists.txt  EarthDialect.cpp  ForwardManagementInterface.cpp  HEParameterInterface.cpp
lib/Dialect/Earth/Transforms/: CMakeLists.txt  Common.cpp  ELASMExplorer.cpp  EarlyModswitch.cpp  ElideConstant.cpp  ErrorEstimator.cpp  LatencyEstimator.cpp  PrivatizeConstant.cpp  ProactiveRescaling.cpp  SMUChecker.cpp  SMUEmbedding.cpp  SNRRescaling.cpp  ScaleManagementScheduler.cpp  UpscaleBubbling.cpp  WaterlineRescaling.cpp
lib/Runtime/: CMakeLists.txt  SEAL_HEVM.cpp
python/hecate/: setup.py
python/hecate/hecate/: __init__.py  expr.py  runner.py
tools/: CMakeLists.txt  frontend.cpp  optimizer.cpp
